# Corpora

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 42984872abcc_initial_schema.py
backend/app/: main.py
backend/app/agent/: graph.py  nodes.py  state.py
backend/app/api/: chat.py  collections.py  documents.py  health.py  schemas.py
backend/app/core/: config.py  security.py
backend/app/db/: models.py  session.py
backend/app/ingest/: chunking.py  embedding.py  parsers.py  worker.py
backend/app/observability/: tracing.py
backend/app/retrieval/: reranker.py  vectorstore.py
backend/tests/: locustfile.py  test_agent.py  test_api.py  test_chunking.py  test_eval_golden.py  test_ingest_e2e.py
eval/: golden.json
eval/corpus/: atlas_handbook.md
frontend/: package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/c/[id]/: page.tsx
frontend/src/components/: Chat.tsx  DocumentsPanel.tsx  Header.tsx  ImageSearch.tsx  Logo.tsx  RequireAuth.tsx
frontend/src/lib/: api.ts  sse.ts
