[project]
name = "corpora-backend"
version = "0.1.0"
description = "Multi-tenant multimodal agentic RAG platform — backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "qdrant-client>=1.13",
    "fastembed>=0.5",
    "arq>=0.26",
    "redis>=5.2",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
    "pymupdf>=1.25",
    "python-docx>=1.1",
    "trafilatura>=2.0",
    "pyjwt[crypto]>=2.10",
    "groq>=0.18",
    "aiofiles>=24.1",
    "langgraph>=1.2.7",
    "langchain-groq>=1.1.3",
    "langchain-core>=1.4.8",
    "sse-starlette>=3.4.5",
    "langfuse>=4.13.0",
    "langchain>=1.3.11",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "mypy>=1.14",
    "greenlet>=3.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "slow: downloads embedding models, runs full ingest",
    "eval: golden-dataset quality gate, needs GROQ_API_KEY",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
